feat: 2.Navigate Between Pages

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,24 @@ typings/
 
 # next.js build output
 .next
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
